--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,19 @@
     "files.associations": {
         "pages.json": "jsonc", // pages.json 可以写注释
         "manifest.json": "jsonc" // manifest.json 可以写注释
-    }
+    },
+    "editor.formatOnSave": true,
+    "prettier.configPath": ".prettierrc.js",
+    "prettier.ignorePath": ".prettierignore",
+    "prettier.prettierPath": "",
+    "prettier.requireConfig": false,
+    // vetur版本低，与eslint不适配
+    "vetur.validation.template": false,
+    // 设置文件默认使用prettier格式化
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    // 配置在保存时，执行stylelint
+    "editor.codeActionsOnSave": {
+        "source.fixAll.stylelint": "explicit"
+    },
+    "cSpell.words": []
 }
