--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"eslint:fix": "eslint --fix .",
 		"pre-commit": "lint-staged",
 		"preinstall": "npx only-allow npm",
+		"style": "stylelint \"./**/*.{css,scss,sass,vue,html}\" --fix",
 		"dev:app": "uni -p app",
 		"dev:app-android": "uni -p app-android",
 		"dev:app-ios": "uni -p app-ios",
@@ -87,7 +88,18 @@
 		"@vue/runtime-core": "^3.3.11",
 		"@vue/tsconfig": "^0.1.3",
 		"husky": "^8.0.3",
+		"postcss": "^8.4.16",
+		"postcss-html": "^1.5.0",
+		"postcss-scss": "^4.0.4",
 		"prettier": "^3.0.3",
+		"sass": "^1.15.0",
+		"stylelint": "^14.11.0",
+		"stylelint-config-prettier": "^9.0.3",
+		"stylelint-config-recommended-scss": "^7.0.0",
+		"stylelint-config-standard": "^28.0.0",
+		"stylelint-config-standard-vue": "^1.0.0",
+		"stylelint-order": "^5.0.0",
+		"stylelint-scss": "^4.3.0",
 		"typescript": "^4.9.4",
 		"vite": "4.3.5",
 		"vue-tsc": "^1.0.24"
