--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 		"@dcloudio/uni-mp-weixin": "3.0.0-4000720240327002",
 		"@dcloudio/uni-mp-xhs": "3.0.0-4000720240327002",
 		"@dcloudio/uni-quickapp-webview": "3.0.0-4000720240327002",
+		"@dcloudio/uni-ui": "^1.5.5",
 		"@types/node": "^20.9.0",
 		"@typescript-eslint/eslint-plugin": "^6.10.0",
 		"@typescript-eslint/parser": "^6.10.0",
@@ -101,6 +102,7 @@
 		"stylelint-order": "^5.0.0",
 		"stylelint-scss": "^4.3.0",
 		"typescript": "^4.9.4",
+		"unplugin-auto-import": "^0.17.6",
 		"vite": "4.3.5",
 		"vue-tsc": "^1.0.24"
 	},
