--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
 		"only-allow": "^1.2.1",
 		"vite-plugin-eslint": "^1.8.1",
 		"vue": "^3.3.11",
-		"vue-i18n": "^9.1.9"
+		"vue-i18n": "^9.1.9",
+		"wot-design-uni": "^1.2.20"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^18.2.0",
