--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     ],
     "types": [
       "@dcloudio/types",
+      "wot-design-uni/global.d.ts",
+      "src/global.d.ts"
     ]
   },
   "include": [
