--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
 		"@dcloudio/uni-mp-xhs": "3.0.0-4000720240327002",
 		"@dcloudio/uni-quickapp-webview": "3.0.0-4000720240327002",
 		"@dcloudio/uni-ui": "^1.5.5",
-		"@types/node": "^20.9.0",
 		"@typescript-eslint/eslint-plugin": "^6.10.0",
 		"@typescript-eslint/parser": "^6.10.0",
 		"eslint": "^8.53.0",
@@ -75,8 +74,8 @@
 		"lint-staged": "^15.0.2",
 		"only-allow": "^1.2.1",
 		"vite-plugin-eslint": "^1.8.1",
-		"vue": "^3.3.11",
-		"vue-i18n": "^9.1.9",
+		"vue": "3.4.21",
+		"vue-i18n": "9.13.1",
 		"wot-design-uni": "^1.2.20"
 	},
 	"devDependencies": {
@@ -87,6 +86,7 @@
 		"@dcloudio/uni-cli-shared": "3.0.0-4000720240327002",
 		"@dcloudio/uni-stacktracey": "3.0.0-4000720240327002",
 		"@dcloudio/vite-plugin-uni": "3.0.0-4000720240327002",
+		"@types/node": "^20.12.12",
 		"@vue/runtime-core": "^3.3.11",
 		"@vue/tsconfig": "^0.1.3",
 		"husky": "^8.0.3",
@@ -104,7 +104,9 @@
 		"stylelint-scss": "^4.3.0",
 		"typescript": "^4.9.4",
 		"unplugin-auto-import": "^0.17.6",
+		"vconsole": "^3.15.1",
 		"vite": "4.3.5",
+		"vite-svg-loader": "^5.1.0",
 		"vue-tsc": "^1.0.24"
 	},
 	"engines": {
